openapi - post /projects
